@@ -21,6 +21,7 @@ Date: 2025-28-09
     - Added a tier 2 atmospheric condenser. you'll need it.
     - Added new technologies and infinite bonus technologies to post-space science. Not all of them though, some gotta be saved for the post-game ;)
     - Added mining drill 3's! they have a 75% drain rate, a larger radius and an extra module slot, totaling to 5.
+    - Added mixing tank 3's as well, unlocked in AA-ATM science. They are double the speed of mixing tank 2's.
 
   Changes:
     - Changed vanilla rocket fuel into Solid rocket fuel.
